--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               </li>
               <li>
                 <iframe
-                  style="border: 0; width: 400px; height: 274px"
+                  style="border: 0; width: auto; height: 224px"
                   src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/"
                   seamless
                   ><a href="https://kseniia.bandcamp.com/album/ambient"
@@ -193,7 +193,7 @@
                 >
 
                 <iframe
-                  style="border: 0; width: 400px; height: 274px"
+                  style="border: 0; width: auto; height: 224px"
                   src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/"
                   seamless
                   ><a href="https://kseniia.bandcamp.com/album/microtonal"
@@ -205,6 +205,38 @@
           </div>
         </div>
       </div>
+    </section>
+    <section id="about">
+      <h2>About me</h2>
+
+      <p>
+        I was born in Saint Petersburg, Russia, a city of incredible beauty.
+      </p>
+      <p>
+        As a professional bass player I was touring Europe and Russia with some
+        of my favorite bands and artists for about 10 years. At the same time I
+        received a masters degree in Public Relations.
+      </p>
+      <p>
+        At some point I felt I have reached my goals back home and decided to
+        change my life, that's how I decided to attend Berklee College of Music.
+        I graduated in Summer 2021 with double major degree: Electronic
+        Production, Design and Performance.
+      </p>
+      <p>
+        Now I live in Brooklyn, play music with some of the best musicians on
+        the planet, so sound design work and learn Software development in my
+        free time.
+      </p>
+      <p>
+        I have 2 favorite states - being an explorer and being a creator. The
+        explorer in me loves to travel, to be outside the comfort zone and to
+        collect impressions and experiences. I'm always starving to fill my
+        imaginary list with new impressions. The other part of myself is
+        tormented by the desire to invent something. These two states for me are
+        lovebirds. The more experiences I have in my bag, the more inspiration
+        and imagination I have for creating and inventing.
+      </p>
     </section>
 
     <section id="contact">
@@ -237,16 +269,19 @@
         <h3 id="msg"></h3>
 
         <div class="social-links">
-          <a href="https://www.facebook.com/ksenia.vasilyeva.3">
+          <a href="https://www.facebook.com/ksenia.vasilyeva.3" target="_blank">
             <img src="assets/fb.png" alt="facebook"
           /></a>
-          <a href="https://www.instagram.com/mrs.esper/">
+          <a href="https://www.instagram.com/mrs.esper/" target="_blank">
             <img src="assets/ig.png" alt="instagram"
           /></a>
-          <a href="https://www.linkedin.com/in/ksenia-vasileva/">
+          <a
+            href="https://www.linkedin.com/in/ksenia-vasileva/"
+            target="_blank"
+          >
             <img src="assets/li.png" alt="linkedin"
           /></a>
-          <a href="https://www.youtube.com/@KsuBass/videos">
+          <a href="https://www.youtube.com/@KsuBass/videos" target="_blank">
             <img src="assets/yt.png" alt="youtube"
           /></a>
         </div>
