--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
               </p>
             </div>
           </div>
+
           <div class="project-video sound-replacement sound-box">
             <h3>Sound Replacement Project</h3>
             <div>
@@ -141,6 +142,7 @@
               </div>
             </div>
           </div>
+
           <div class="project-video audio3d sound-box">
             <h3>3D Audio Project</h3>
 
@@ -156,53 +158,69 @@
               </div>
             </div>
           </div>
-          <div class="sound-box project-links">
-            <ul>
-              <li>
-                <a
-                  href="https://ide.csound.com/editor/lmLHgV0qpqUUxLSvGETq"
-                  class="glowing-list-3"
-                  target="_blank"
-                  >Generative Music in CSound</a
-                >
-              </li>
-              <li>
-                <a href="/ux.html" class="glowing-list-2">UX Sound Design</a>
-              </li>
-              <li>
-                <a href="/bike.html" class="glowing-list-4"
-                  >Drum kit made of my sampled bicycle</a
-                >
-              </li>
-              <li>
-                <a
-                  class="glowing-list-5"
-                  href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
-                  target="_blank"
-                  >Modular synths jams</a
-                >
-              </li>
-              <li>
-                <iframe
-                  style="border: 0; width: auto; height: 224px"
-                  src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/"
-                  seamless
-                  ><a href="https://kseniia.bandcamp.com/album/ambient"
-                    >Ambient by Kseniia</a
-                  ></iframe
-                >
+          <div class="project-video audio3d sound-box">
+            <h3>Immersive Installation</h3>
 
+            <div>
+              <div class="iframe-aspect-ratio">
                 <iframe
-                  style="border: 0; width: auto; height: 224px"
-                  src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/"
-                  seamless
-                  ><a href="https://kseniia.bandcamp.com/album/microtonal"
-                    >Microtonal by Kseniia</a
-                  ></iframe
-                >
-              </li>
-            </ul>
+                  src="https://www.youtube.com/embed/wxC5nutnEyA?si=jpNL74Nh851uAXLO"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
           </div>
+        </div>
+
+        <div class="sound-box project-links">
+          <ul>
+            <li>
+              <a
+                href="https://ide.csound.com/editor/lmLHgV0qpqUUxLSvGETq"
+                class="glowing-list-3"
+                target="_blank"
+                >Generative Music in CSound</a
+              >
+            </li>
+            <li>
+              <a href="/ux.html" class="glowing-list-2">UX Sound Design</a>
+            </li>
+            <li>
+              <a href="/bike.html" class="glowing-list-4"
+                >Drum kit made of my sampled bicycle</a
+              >
+            </li>
+            <li>
+              <a
+                class="glowing-list-5"
+                href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
+                target="_blank"
+                >Modular synths jams</a
+              >
+            </li>
+            <li>
+              <iframe
+                style="border: 0; width: auto; height: 224px"
+                src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/"
+                seamless
+                ><a href="https://kseniia.bandcamp.com/album/ambient"
+                  >Ambient by Kseniia</a
+                ></iframe
+              >
+
+              <iframe
+                style="border: 0; width: auto; height: 224px"
+                src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/"
+                seamless
+                ><a href="https://kseniia.bandcamp.com/album/microtonal"
+                  >Microtonal by Kseniia</a
+                ></iframe
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </section>
